Fix spacing on media player for tablet size

--- a/client/src/components/homepage-player/homepage-player.css
+++ b/client/src/components/homepage-player/homepage-player.css
@@ -95,4 +95,7 @@
   #songDetails h3 {
     font-size: 18px;
   }
+  .progress-container {
+    margin-right: 15px;
+  }
 }
